--- a/KeySafe/KeySafe/KeySafe.csproj
+++ b/KeySafe/KeySafe/KeySafe.csproj
@@ -74,6 +74,9 @@
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>533.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.AsyncInterfaces.6.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
@@ -119,6 +122,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CreatePassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreatePassword.Designer.cs">
+      <DependentUpon>CreatePassword.cs</DependentUpon>
+    </Compile>
     <Compile Include="FolderForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -158,6 +167,9 @@
     <Compile Include="UserControls\TableView.Designer.cs">
       <DependentUpon>TableView.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CreatePassword.resx">
+      <DependentUpon>CreatePassword.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FolderForm.resx">
       <DependentUpon>FolderForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -172,6 +184,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="UserControls\LoginView.resx">
       <DependentUpon>LoginView.cs</DependentUpon>
@@ -196,6 +209,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="533.ico" />
+    <None Include="Resources\1557.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Text.Json.6.0.2\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.2\build\System.Text.Json.targets')" />
