Add show password in loginView and CreatePassword Form.

--- a/KeySafe/KeySafe/App.config
+++ b/KeySafe/KeySafe/App.config
@@ -26,6 +26,12 @@
           </ArrayOfString>
         </value>
       </setting>
+      <setting name="Logintry" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Seconds" serializeAs="String">
+        <value>0</value>
+      </setting>
     </KeySafe.Settings>
   </userSettings>
 </configuration>
