--- a/KeySafe/KeySafe/KeySafe.csproj
+++ b/KeySafe/KeySafe/KeySafe.csproj
@@ -173,6 +173,9 @@
     <EmbeddedResource Include="FolderForm.resx">
       <DependentUpon>FolderForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form_DataEntry.resx">
       <DependentUpon>Form_DataEntry.cs</DependentUpon>
     </EmbeddedResource>
