--- a/KeySafe/KeySafe/Settings.settings
+++ b/KeySafe/KeySafe/Settings.settings
@@ -9,5 +9,11 @@
   &lt;string&gt;Test2&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
+    <Setting Name="Logintry" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Seconds" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
