--- a/KeySafe/KeySafe/bin/x64/Debug/KeySafe.exe.config
+++ b/KeySafe/KeySafe/bin/x64/Debug/KeySafe.exe.config
@@ -26,6 +26,12 @@
           </ArrayOfString>
         </value>
       </setting>
+      <setting name="Logintry" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="Seconds" serializeAs="String">
+        <value>0</value>
+      </setting>
     </KeySafe.Settings>
   </userSettings>
 </configuration>
