Add Readme file. Fix bug of edit and delete entries. Default folder cant be deleted oder renamed.

--- a/KeySafe/KeySafe/KeySafe.csproj
+++ b/KeySafe/KeySafe/KeySafe.csproj
@@ -215,7 +215,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="533.ico" />
+    <Content Include="Readme.txt" />
     <None Include="Resources\1557.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Text.Json.6.0.2\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.2\build\System.Text.Json.targets')" />
